KisClipboard: use the correct check for defaulted bitmap pastes

If cbData->hasImage() returns true, but qimage earlier was null, then
the clipboard has an unfinished or corrupt paste data. We'd added the
check for these cases, but I didn't update the default options for
Chromium sources.

BUG: 456778